--- a/src/App.css
+++ b/src/App.css
@@ -4,32 +4,6 @@
   padding: 0;
 }
 
-
-/* TP TODOLIST */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* COURS INTRODUCTION A REACT */
-/* body {
-  background-color: #222;
-  color: #f1f1f1;
-  font-family: Arial, Helvetica, sans-serif;
-} */
-/* .title {
-  color: crimson;
+.container.tasks {
+  margin-bottom: 7em;
 }
-
-.clicked {
-  color: red;
-} */
